Update lexicon tooltip examples with new tooltips

--- a/views/lexicon/includes/notifications.html.twig
+++ b/views/lexicon/includes/notifications.html.twig
@@ -22,9 +22,8 @@
                         <button
                             type="button"
                             class="remove-button pull-right"
-                            data-toggle="tooltips"
-                            data-placement="left"
-                            title="Dismiss"
+                            data-tippy-content="Dismiss"
+                            data-tippy-placement="left"
                             data-action="remove"
                             data-action-target="#itemToRemove"
                             >
@@ -50,9 +49,8 @@
                         <button
                             type="button"
                             class="remove-button pull-right"
-                            data-toggle="tooltips"
-                            data-placement="left"
-                            title="Dismiss"
+                            data-tippy-content="Dismiss"
+                            data-tippy-placement="left"
                             data-action="remove"
                             data-action-target="#itemToRemove"
                             >
@@ -78,9 +76,8 @@
                         <button
                             type="button"
                             class="remove-button pull-right"
-                            data-toggle="tooltips"
-                            data-placement="left"
-                            title="Dismiss"
+                            data-tippy-content="Dismiss"
+                            data-tippy-placement="left"
                             data-action="remove"
                             data-action-target="#itemToRemove"
                             >
@@ -106,9 +103,8 @@
                         <button
                             type="button"
                             class="remove-button pull-right"
-                            data-toggle="tooltips"
-                            data-placement="left"
-                            title="Dismiss"
+                            data-tippy-content="Dismiss"
+                            data-tippy-placement="left"
                             data-action="remove"
                             data-action-target="#itemToRemove"
                             >
@@ -134,9 +130,8 @@
                         <button
                             type="button"
                             class="remove-button pull-right"
-                            data-toggle="tooltips"
-                            data-placement="left"
-                            title="Dismiss"
+                            data-tippy-content="Dismiss"
+                            data-tippy-placement="left"
                             data-action="remove"
                             data-action-target="#itemToRemove"
                             >
@@ -162,9 +157,8 @@
                         <button
                             type="button"
                             class="remove-button pull-right"
-                            data-toggle="tooltips"
-                            data-placement="left"
-                            title="Dismiss"
+                            data-tippy-content="Dismiss"
+                            data-tippy-placement="left"
                             data-action="remove"
                             data-action-target="#itemToRemove"
                             >
