--- a/views/lexicon/tabs/modals.html.twig
+++ b/views/lexicon/tabs/modals.html.twig
@@ -93,10 +93,9 @@
                                 'label': 'Close'
                             }),
                             'class': 'close',
-                            'title': 'Close',
                             'data-dismiss': 'modal',
-                            'data-toggle': 'tooltips',
-                            'data-placement': 'bottom',
+                            'data-tippy-content': 'Close',
+                            'data-tippy-placement': 'bottom',
 
                         })
                     }}
@@ -104,13 +103,11 @@
                         html.link({
                             'href': '#',
                             'label': html.icon('cloud-download', {
-                                'label': 'Close'
+                                'label': 'Download'
                             }),
                             'class': 'download',
-                            'title': 'Download <span class="muted">(58k)</span>',
-                            'data-html': 'true',
-                            'data-toggle': 'tooltips',
-                            'data-placement': 'bottom',
+                            'data-tippy-content': 'Download (58k)',
+                            'data-tippy-placement': 'bottom',
 
                         })
                     }}
