--- a/views/pulsar/v2/helpers/pulsar.html.twig
+++ b/views/pulsar/v2/helpers/pulsar.html.twig
@@ -93,10 +93,9 @@
               html.link({
                 'label': html.icon('check-sign'),
                 'class': 'notifications__dismiss',
-                'title': 'Mark all as read',
                 'data': {
-                    'toggle': 'tooltips',
-                    'placement': 'left'
+                    'tippy-content': 'Mark all as read',
+                    'tippy-placement': 'left',
                 }
               })
             }}
