--- a/views/pulsar/v2/helpers/rules.html.twig
+++ b/views/pulsar/v2/helpers/rules.html.twig
@@ -101,7 +101,7 @@
                 <div class="rule-block rule-block--{{ options.type|default }}" data-index="__index__">
                     <div class="rule-block__header rule-block__header--{{ options.type|default }}">
                         <h5 class="rule-block__heading">{{ options.type|default }}</h5>
-                        <i data-toggle="tooltips" data-placement="right" data-title="What should cause this rule to run" title="What should cause this rule to run" aria-hidden="true"  class="icon-question-sign rule-block__heading__icon"></i>
+                        <i data-tippy-placement="right" data-tippy-content="What should cause this rule to run" class="icon-question-sign rule-block__heading__icon"></i>
                     </div>
 
                     <div class="rule-block__controls rule__trigger__form">
@@ -115,7 +115,7 @@
                         {% endif %}
 
                         {% if (options.removeable is defined and options.removeable != false) or options.removeable is not defined %}
-                            <a data-action="remove" data-placement="left" data-toggle="tooltips" data-title="Remove this item"  class="remove__control js-remove-trigger"><i  class="icon-remove-sign"><span class="hide">Remove this item</span></i></a>
+                            <a data-action="remove" data-tippy-placement="left" data-tippy-content="Remove this item" class="remove__control js-remove-trigger"><i  class="icon-remove-sign"><span class="hide">Remove this item</span></i></a>
                         {% endif %}
 
                     </div>
