--- a/views/pulsar/v2/helpers/util.html.twig
+++ b/views/pulsar/v2/helpers/util.html.twig
@@ -155,7 +155,7 @@
 {% macro required(required) %}
 {% spaceless %}
     {% if required %}
-        &nbsp;<span class="required-indicator" data-toggle="tooltips" title="required">*</span>
+        &nbsp;<span class="required-indicator" data-tippy-content="required">*</span>
     {% endif  %}
 {% endspaceless %}
 {% endmacro %}
