--- a/stylesheets/_component.datatables.scss
+++ b/stylesheets/_component.datatables.scss
@@ -263,18 +263,41 @@ th.sorting_disabled:hover {
 }
 
 .table-child-toggle {
+    appearance: none;
+    background: transparent;
+    border: 0;
+    box-sizing: border-box;
     color: color(jadu-blue);
+    cursor: pointer;
     display: none;
-    font-size: 14px;
+    font-size: $font-size-base;
+    font-weight: normal;
+    line-height: normal;
+    margin: 0;
+    padding: 4px 7px 0;
+    position: relative;
+    text-align: center;
+    text-decoration: none;
+    user-select: none;
+    vertical-align: top;
+    white-space: nowrap;
+
+    &:focus {
+        @include pulsar-button-focused;
+    }
+
+    &:hover {
+        color: color(black);
+    }
 
     .collapsed & {
         display: inline-block;
     }
+}
 
-    .parent &::before {
-        color: color(jadu-red);
-        content: $minus-sign;
-    }
+.parent .table-child-toggle i::before {
+    color: color(jadu-red);
+    content: $minus-sign;
 }
 
 .datatable .child ul {
