fix broken status indicator htmo (missing closing span)

--- a/views/pulsar/v2/helpers/html.html.twig
+++ b/views/pulsar/v2/helpers/html.html.twig
@@ -1480,7 +1480,7 @@ data-* | string | Data attributes, eg: `'data-foo': 'bar'`
             })
         )
     }}>
-        <span class="hide">{{ options['title'] }}
+        <span class="hide">{{ options['title'] }}</span>
     </span>
 
 {% endif %}
