--- a/views/pulsar/components/flash.html.twig
+++ b/views/pulsar/components/flash.html.twig
@@ -1,3 +1,4 @@
+{% spaceless %}
 <div class="flash-container js-flash-container">
 {% if flash_message is defined %}
 {% import '@pulsar/pulsar/v2/helpers/flash.html.twig' as flash %}
@@ -10,3 +11,4 @@
 }}
 {% endif %}
 </div>
+{% endspaceless %}
