--- a/stylesheets/_component.navigation.scss
+++ b/stylesheets/_component.navigation.scss
@@ -181,7 +181,8 @@
     display: inline-block;
     height: 34px;
     line-height: normal;
-    margin-right: 10px;
+    margin-bottom: 10px;
+    margin-right: 5px;
     padding: 8px 14px 6px;
     text-decoration: none;
 
