--- a/stylesheets/_component.toolbar.scss
+++ b/stylesheets/_component.toolbar.scss
@@ -1,148 +1,76 @@
 @import 'component.labels';
 
 .toolbar {
-    display: block;
-    float: left;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
     padding: 12px 20px 0;
-    width: 100%;
-
-    @include respond-min($screen-desktop) {
-        background-color: color(white);
-        padding: 18px 20px 0;
-    }
-
-    .dropdown {
-        position: static;
-
-        @include respond-min($screen-xsmall) {
-            position: relative;
-        }
-    }
-
-    .dropdown__menu {
-        clear: both;
-        left: $padding-small-horizontal;
-        position: absolute;
-        right: $padding-small-horizontal;
-        top: 60px;
-
-        @include respond-min($screen-xsmall) {
-            left: auto;
-            right: 0;
-            top: 35px;
-        }
-    }
-
 }
 
-.user-menu > .btn {
-    padding: 0;
-
-    &:hover {
-        top: 0;
-    }
+.toolbar-actions {
+    flex-grow: 1;
+    display: flex;
+    justify-content: flex-end;
+    margin-bottom: 10px;
 }
 
-.nav-user {
-    float: right;
-    font-size: $font-size-base;
-
-    .btn {
-        font-size: $font-size-base;
-    }
-
-    .dropdown {
-        float: left;
-        margin-left: 20px;
-        min-width: 60px;
-        z-index: $zindex-dropdown;
-    }
-
-    .dropdown__header {
-        border-bottom: 1px solid color(gray, lighter);
-        font-family: $font-family-regular;
-        padding: 3px 15px 3px 10px;
-    }
-
-    .dropdown__menu .is-active {
-        background-color: color(jadu-blue, pale);
-    }
-}
-
-.site-switcher__label {
-    color: color('text');
-    display: inline-block;
-    text-decoration: none;
-}
-
-// Height of toolbar right hand actions
-.nav-user > .dropdown > .btn, // pulsar
-.nav-user > .dropdown > .dropdown-toggle, // cms
-.site-switcher__label {
-    height: 42px;
-    line-height: 42px;
-    padding: 0 10px;
-    top: 0;
-    vertical-align: top;
-}
-
-.toolbar-icon,
-%toolbar-icon {
-    float: right;
-    font-size: 24px;
-    line-height: 42px; // maintain alignment in toolbar
-    margin-left: $gutter-width;
-    padding: 0 4px;
-    position: relative; // stop is-new indicator wandering off when parents switch to static position
-    text-decoration: none;
-
-    @include respond-min($screen-phone) {
-        padding: 0 5px;
-    }
-
-    &,
-    &:link,
-    &:visited {
-        color: color(text, light);
-    }
-
-    &:hover,
-    & a:hover {
-        color: color(text);
-    }
-
-    &.is-active {
-        color: color(black);
-    }
-}
-
-.toolbar-help-link {
-    @extend %label;
-
-    border-radius: 15px;
-    color: color(text);
-    font-size: 14px;
-    font-weight: normal;
-    padding: 5px 8px;
-    position: relative;
-    top: -4px;
-    text-decoration: none;
-
-    &:hover {
-        top: -4px; // don't move this element on hover
-    }
-}
-
-.toolbar-help {
-    display: none;
+.toolbar-action {
+    flex-grow: 1;
+    margin-left: 5px;
 
     @include respond-min($screen-tablet) {
-        display: block;
+        flex-grow: 0;
+    }
+
+    &:first-of-type {
+        margin-left: 0;
+    }
+
+    .btn:not(.btn--naked):not(.remove-button):not(.edit-button):not(.remove-button):last-of-type {
+        border: 1px solid $input-border;
+        border-width: 1px;
+        padding-bottom: 6.5px;
+        padding-top: 6.5px;
+        width: 100%;
+
+        @include respond-min($screen-desktop) {
+            padding-bottom: 8px;
+            padding-top: 6px;
+        }
+
+        i {
+            font-size: 18px;
+            vertical-align: middle;
+
+            @include respond-min($screen-desktop) {
+                font-size: 14px;
+            }
+        }
+
+        > .toolbar-action__text {
+            display: none;
+            margin-left: 0;
+
+            @include respond-min($screen-desktop) {
+                display: inline;
+                margin-left: 5px;
+            }
+        }
+
+        > .caret {
+            border-top-color: color(text);
+        }
+    }
+
+    .caret {
+        margin-left: 3px;
     }
 
     .dropdown__menu {
-        min-width: 180px;
-        padding: 0;
+        border-top: 2px solid $input-border;
+        left: auto;
+        right: 0;
+        top: 40px;
 
         .media {
             line-height: 24px;
@@ -154,3 +82,171 @@
         }
     }
 }
+
+.toolbar-action--icon .btn:not(.btn--naked):not(.remove-button):not(.edit-button):not(.remove-button):last-of-type {
+    padding-bottom: 6.5px;
+    padding-top: 6.5px;
+
+    i {
+        font-size: 18px;
+        vertical-align: middle;
+    }
+}
+
+
+
+// .toolbar {
+//     display: block;
+//     float: left;
+//     padding: 12px 20px 0;
+//     width: 100%;
+
+//     @include respond-min($screen-desktop) {
+//         background-color: color(white);
+//         padding: 18px 20px 0;
+//     }
+
+//     .dropdown {
+//         position: static;
+
+//         @include respond-min($screen-xsmall) {
+//             position: relative;
+//         }
+//     }
+
+//     .dropdown__menu {
+//         clear: both;
+//         left: $padding-small-horizontal;
+//         position: absolute;
+//         right: $padding-small-horizontal;
+//         top: 60px;
+
+//         @include respond-min($screen-xsmall) {
+//             left: auto;
+//             right: 0;
+//             top: 35px;
+//         }
+//     }
+
+// }
+
+// .user-menu > .btn {
+//     padding: 0;
+
+//     &:hover {
+//         top: 0;
+//     }
+// }
+
+// .nav-user {
+//     float: right;
+//     font-size: $font-size-base;
+
+//     .btn {
+//         font-size: $font-size-base;
+//     }
+
+//     .dropdown {
+//         float: left;
+//         margin-left: 20px;
+//         min-width: 60px;
+//         z-index: $zindex-dropdown;
+//     }
+
+//     .dropdown__header {
+//         border-bottom: 1px solid color(gray, lighter);
+//         font-family: $font-family-regular;
+//         padding: 3px 15px 3px 10px;
+//     }
+
+//     .dropdown__menu .is-active {
+//         background-color: color(jadu-blue, pale);
+//     }
+// }
+
+// .site-switcher__label {
+//     color: color('text');
+//     display: inline-block;
+//     text-decoration: none;
+// }
+
+// // Height of toolbar right hand actions
+// .nav-user > .dropdown > .btn, // pulsar
+// .nav-user > .dropdown > .dropdown-toggle, // cms
+// .site-switcher__label {
+//     height: 42px;
+//     line-height: 42px;
+//     padding: 0 10px;
+//     top: 0;
+//     vertical-align: top;
+// }
+
+.toolbar-icon,
+%toolbar-icon {
+    position: relative; // stop is-new indicator wandering off when parents switch to static position
+}
+//     float: right;
+//     font-size: 24px;
+//     line-height: 42px; // maintain alignment in toolbar
+//     margin-left: $gutter-width;
+//     padding: 0 4px;
+//     text-decoration: none;
+
+//     @include respond-min($screen-phone) {
+//         padding: 0 5px;
+//     }
+
+//     &,
+//     &:link,
+//     &:visited {
+//         color: color(text, light);
+//     }
+
+//     &:hover,
+//     & a:hover {
+//         color: color(text);
+//     }
+
+//     &.is-active {
+//         color: color(black);
+//     }
+// }
+
+// .toolbar-help-link {
+//     @extend %label;
+
+//     border-radius: 15px;
+//     color: color(text);
+//     font-size: 14px;
+//     font-weight: normal;
+//     padding: 5px 8px;
+//     position: relative;
+//     top: -4px;
+//     text-decoration: none;
+
+//     &:hover {
+//         top: -4px; // don't move this element on hover
+//     }
+// }
+
+// .toolbar-help {
+//     display: none;
+
+//     @include respond-min($screen-tablet) {
+//         display: block;
+//     }
+
+//     .dropdown__menu {
+//         min-width: 180px;
+//         padding: 0;
+
+//         .media {
+//             line-height: 24px;
+//             padding: 10px;
+
+//             &:hover {
+//                 background-color: color(background, light);
+//             }
+//         }
+//     }
+// }
