Remove redundant classes

--- a/views/lexicon/includes/notifications.html.twig
+++ b/views/lexicon/includes/notifications.html.twig
@@ -1,4 +1,4 @@
-    <div class="btn__group dropdown toolbar-action toolbar-action--icon notifications">
+    <div class="btn__group dropdown notifications">
         {{
             html.button({
                 'class': 'btn--outline btn--inverse notifications-toggle is-active',
