Add CMS legacy class to manuals dropdown

--- a/views/pulsar/v2/helpers/nav.html.twig
+++ b/views/pulsar/v2/helpers/nav.html.twig
@@ -171,7 +171,7 @@
     <div class="btn__group dropdown">
         {{
             html.button({
-                'class': 'btn--outline btn--inverse',
+                'class': 'dropdown-toggle btn--outline btn--inverse',
                 'label': html.icon('book') ~ ' <span class="caret"></span>',
                 'data-toggle': 'dropdown'
             })
