--- a/stylesheets/_component.notifications.scss
+++ b/stylesheets/_component.notifications.scss
@@ -48,7 +48,7 @@
         content: '';
         display: block;
         position: absolute;
-        right: 5px;
+        right: 42%;
         top: 3px;
         height: 10px;
         width: 10px;
