--- a/views/pulsar/layouts/base.html.twig
+++ b/views/pulsar/layouts/base.html.twig
@@ -92,7 +92,7 @@
                     {{
                         html.button_dropdown({
                             'class': 'btn--outline btn--inverse',
-                            'label': html.icon('user-o') ~ ' <span class="toolbar-action__text">Paul Stanton</span>',
+                            'label': html.icon('user-o') ~ ' <span class="toolbar-action__text">Paul Stanton</span> (23)',
                             'items': [
                                 html.link({
                                     "label": html.icon('user') ~ " My details",
