--- a/stylesheets/_component.notifications.scss
+++ b/stylesheets/_component.notifications.scss
@@ -48,10 +48,14 @@
         content: '';
         display: block;
         position: absolute;
-        right: 42%;
+        right: 44%;
         top: 3px;
         height: 10px;
         width: 10px;
+
+        @include respond-min($screen-tablet) {
+            right: 35%;
+        }
     }
 }
 
