--- a/stylesheets/_component.toolbar.scss
+++ b/stylesheets/_component.toolbar.scss
@@ -35,12 +35,18 @@
 
         @include respond-min($screen-desktop) {
             padding-bottom: 7px;
-            padding-top: 6px;
+            padding-top: 7px;
+        }
+
+        &:hover {
+            background-color: color(background, light) !important;
+            margin-bottom: 0;
+            transform: none;
         }
 
         i {
             font-size: 18px;
-            vertical-align: middle;
+            vertical-align: baseline;
 
             @include respond-min($screen-desktop) {
                 font-size: 14px;
@@ -68,8 +74,6 @@
 
     .dropdown__menu {
         border-top: 2px solid $input-border;
-        left: auto;
-        right: 0;
         top: 40px;
 
         .media {
@@ -80,6 +84,18 @@
                 background-color: color(background, light);
             }
         }
+    }
+
+    // First two actions
+    &:nth-child(-n+2) .dropdown__menu {
+        left: 0;
+        right: auto;
+    }
+
+    // Last two actions
+    &:nth-child(n+3) {
+        left: auto;
+        right: 0;
     }
 }
 
@@ -93,160 +109,7 @@
     }
 }
 
-
-
-// .toolbar {
-//     display: block;
-//     float: left;
-//     padding: 12px 20px 0;
-//     width: 100%;
-
-//     @include respond-min($screen-desktop) {
-//         background-color: color(white);
-//         padding: 18px 20px 0;
-//     }
-
-//     .dropdown {
-//         position: static;
-
-//         @include respond-min($screen-xsmall) {
-//             position: relative;
-//         }
-//     }
-
-//     .dropdown__menu {
-//         clear: both;
-//         left: $padding-small-horizontal;
-//         position: absolute;
-//         right: $padding-small-horizontal;
-//         top: 60px;
-
-//         @include respond-min($screen-xsmall) {
-//             left: auto;
-//             right: 0;
-//             top: 35px;
-//         }
-//     }
-
-// }
-
-// .user-menu > .btn {
-//     padding: 0;
-
-//     &:hover {
-//         top: 0;
-//     }
-// }
-
-// .nav-user {
-//     float: right;
-//     font-size: $font-size-base;
-
-//     .btn {
-//         font-size: $font-size-base;
-//     }
-
-//     .dropdown {
-//         float: left;
-//         margin-left: 20px;
-//         min-width: 60px;
-//         z-index: $zindex-dropdown;
-//     }
-
-//     .dropdown__header {
-//         border-bottom: 1px solid color(gray, lighter);
-//         font-family: $font-family-regular;
-//         padding: 3px 15px 3px 10px;
-//     }
-
-//     .dropdown__menu .is-active {
-//         background-color: color(jadu-blue, pale);
-//     }
-// }
-
-// .site-switcher__label {
-//     color: color('text');
-//     display: inline-block;
-//     text-decoration: none;
-// }
-
-// // Height of toolbar right hand actions
-// .nav-user > .dropdown > .btn, // pulsar
-// .nav-user > .dropdown > .dropdown-toggle, // cms
-// .site-switcher__label {
-//     height: 42px;
-//     line-height: 42px;
-//     padding: 0 10px;
-//     top: 0;
-//     vertical-align: top;
-// }
-
 .toolbar-icon,
 %toolbar-icon {
     position: relative; // stop is-new indicator wandering off when parents switch to static position
 }
-//     float: right;
-//     font-size: 24px;
-//     line-height: 42px; // maintain alignment in toolbar
-//     margin-left: $gutter-width;
-//     padding: 0 4px;
-//     text-decoration: none;
-
-//     @include respond-min($screen-phone) {
-//         padding: 0 5px;
-//     }
-
-//     &,
-//     &:link,
-//     &:visited {
-//         color: color(text, light);
-//     }
-
-//     &:hover,
-//     & a:hover {
-//         color: color(text);
-//     }
-
-//     &.is-active {
-//         color: color(black);
-//     }
-// }
-
-// .toolbar-help-link {
-//     @extend %label;
-
-//     border-radius: 15px;
-//     color: color(text);
-//     font-size: 14px;
-//     font-weight: normal;
-//     padding: 5px 8px;
-//     position: relative;
-//     top: -4px;
-//     text-decoration: none;
-
-//     &:hover {
-//         top: -4px; // don't move this element on hover
-//     }
-// }
-
-// .toolbar-help {
-//     display: none;
-
-//     @include respond-min($screen-tablet) {
-//         display: block;
-//     }
-
-//     .dropdown__menu {
-//         min-width: 180px;
-//         padding: 0;
-
-//         .media {
-//             line-height: 24px;
-//             padding: 10px;
-
-//             &:hover {
-//                 background-color: color(background, light);
-//             }
-//         }
-//     }
-// }
