--- a/views/pulsar/layouts/pulsar.html.twig
+++ b/views/pulsar/layouts/pulsar.html.twig
@@ -5,7 +5,7 @@
         {% include '@pulsar/pulsar/components/flash.html.twig' %}
     </header>
 
-    <div role="main" class="container">
+    <div class="container">
 
         <div class="inner-wrapper">
             {% include '@pulsar/pulsar/components/navigation.html.twig' %}
