--- a/stylesheets/_component.navigation.scss
+++ b/stylesheets/_component.navigation.scss
@@ -179,11 +179,11 @@
     border-radius: 4px;
     color: $nav-color-dark;
     display: inline-block;
-    height: 34px;
+    height: 32px;
     line-height: normal;
     margin-bottom: 10px;
     margin-right: 5px;
-    padding: 8px 14px 6px;
+    padding: 6px 14px;
     text-decoration: none;
 
     @include respond-min($screen-desktop) {
