--- a/stylesheets/_component.search.scss
+++ b/stylesheets/_component.search.scss
@@ -3,6 +3,7 @@
     border-radius: 4px;
     display: block;
     flex-grow: 1;
+    height: 32px;
     margin-bottom: 10px;
     margin-right: 5px;
     position: relative;
@@ -76,7 +77,7 @@ input.main-search__field::-ms-clear {
     padding: 1px 8px 0;
     position: absolute;
     right: 0;
-    top: 3px;
+    top: 5px;
     z-index: 3;
 
     @include respond-min($screen-tablet) {
