--- a/views/pulsar/v2/helpers/nav.html.twig
+++ b/views/pulsar/v2/helpers/nav.html.twig
@@ -168,7 +168,7 @@
 {%- macro help(options) -%}
     {% import '@pulsar/pulsar/v2/helpers/html.html.twig' as html %}
     {% if options.items is defined and options.items is iterable %}
-    <div class="btn__group dropdown">
+    <div class="btn__group dropdown toolbar-action--icon">
         {{
             html.button({
                 'class': 'dropdown-toggle btn--outline btn--inverse',
