Fixed label link style, remove button and SR label

--- a/stylesheets/_mixin.focus.scss
+++ b/stylesheets/_mixin.focus.scss
@@ -112,3 +112,8 @@
     outline: none;
     text-decoration: none;
 }
+
+@mixin pulsar-link-label-focused {
+    background-color: color(background, focus);
+    color: color(black);
+}
