Fix landmark and SR issues with mobile help side bar

--- a/views/pulsar/layouts/base.html.twig
+++ b/views/pulsar/layouts/base.html.twig
@@ -131,7 +131,7 @@
                 </div>
             </div>
 
-            <aside aria-label="additional information" class="tab-help-container t-tab-help-container"><div class="tab-help"></div></aside>
+            <aside aria-label="help" class="tab-help-container t-tab-help-container"><div class="tab-help"></div></aside>
         </div>
     </div>
 
