Add aria-diabled attribute to disabled UI wrapper and change text colour used for disabled links

--- a/views/lexicon/patterns/disabled-ui/disabled-ui.html.twig
+++ b/views/lexicon/patterns/disabled-ui/disabled-ui.html.twig
@@ -31,7 +31,8 @@
     {{
         html.link({
             'label': 'External link',
-            'href': 'http://google.com'
+            'href': 'http://google.com',
+            'disabled': true
         })
     }}
 
