--- a/stylesheets/_utility.utilities.scss
+++ b/stylesheets/_utility.utilities.scss
@@ -358,6 +358,10 @@ p.success {
     @extend %u-cursor-not-allowed;
 
     opacity: .25 !important;
+
+    a.is-disabled {
+        color: color(link);
+    }
 }
 
 %u-no-hover:hover,
