Fixed colour panel cta contrast issue and related lexicon a11y tool errors

--- a/stylesheets/_component.panels.scss
+++ b/stylesheets/_component.panels.scss
@@ -100,7 +100,7 @@
             a:hover,
             a:active,
             a:visited {
-                color: $state-color-alt;
+                color: $state-color-alt !important;
             }
         }
     }
