--- a/stylesheets/_component.timeline.scss
+++ b/stylesheets/_component.timeline.scss
@@ -106,7 +106,7 @@
     }
 
     &--user {
-        background-color: color(jadu-green, base);
+        background-color: color(jadu-green, darkest);
         color: color(white);
     }
 
