Add accessible label to user guides toolbar button

--- a/views/pulsar/v2/helpers/nav.html.twig
+++ b/views/pulsar/v2/helpers/nav.html.twig
@@ -172,7 +172,7 @@
         {{
             html.button({
                 'class': 'dropdown-toggle btn--outline btn--inverse',
-                'label': html.icon('book') ~ ' <span class="caret"></span>',
+                'label': html.icon('book', { 'label': 'User guides' }) ~ ' <span class="caret"></span>',
                 'data-toggle': 'dropdown'
             })
         }}
